apps/services/mlops/langflow/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: langflow
  labels:
    app: langflow
spec:
  selector:
    matchLabels:
      app: langflow
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      name: langflow
      labels:
        app: langflow
    spec:
      containers:
      - name: langflow-server
        image: docker.io/grubertech/langflow:v0.4.8
        ports:
          - name: http
            containerPort: 7860
            protocol: TCP
        resources:
          limits:
            cpu: 300m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
