apps/services/mlops/langflow/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: langflow-internal
  annotations:
    external-dns.alpha.kubernetes.io/hostname: lang.gruber.dev.br
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: lang.gruber.dev.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lang-internal
            port:
              name: http
  tls:
  - hosts:
    - lang.gruber.dev.br
    secretName: lang-tls
